--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  align-items: center;
   height: 600px;
   padding: 10px 20px;
   background-color: #003697;
@@ -14,7 +15,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  justify-content: left;
+  justify-content: center;
 }
 
 .footer-logo {
@@ -23,6 +24,7 @@
   height: 40px;
   background-size: contain;
   background-repeat: no-repeat;
+  margin-right: 150px;
 }
 
 .regiao {
@@ -32,6 +34,7 @@
   display: flex;
   flex-direction: row;
   margin-left: 60px;
+  margin-left: 150px;
 }
 
 .regiao > span {
