--- a/src/app/components/menu-bar/menu-bar.component.css
+++ b/src/app/components/menu-bar/menu-bar.component.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   position: fixed;
+  justify-content: center;
   z-index: 999;
   background-color: #FFFFFF;
   width: 100%;
